fix cookie info table width for certain locales
Long cookie contents will now wrap earlier than they need to. CSS really doesn't want to do what we want (wrap the text at the inherited width, or anything except a hardcoded width). So I set the width to be narrower (300 instead of 520) and also set the table's layout to fixed, so that even if 300 is too wide the whole table won't overflow.

BUG=69447
TEST=LANGUAGE=fr_FR ./out/Release/chrome

Review URL: http://codereview.chromium.org/6327013

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@72026 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 03f92bb25184f13f4af0a88d0953ed482a64ea21

--- a/chrome/browser/resources/options/cookies_view.css
+++ b/chrome/browser/resources/options/cookies_view.css
@@ -5,6 +5,7 @@ found in the LICENSE file.
 */
 
 .cookies-info-table {
+  table-layout: fixed;
   width: 100%;
 }
 
@@ -38,6 +39,6 @@ html[dir=ltr] .cookie-details-label {
 
 #cookieContent {
   display: block;
-  width: 520px;
+  width: 300px;
   word-wrap: break-word;
 }
